fixed top nav bar hide on small screen

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -2280,7 +2280,7 @@ ul.delivery-options {
 
 .menu .homepage {
     text-indent: -9999px;
-    display: block;
+    /*display: block;*/
     width: 50px;
     height: 50px;
     padding: 0;
@@ -2572,11 +2572,15 @@ li.dropdown ul li a:hover {
     .menu {
         max-height: none;
     }
-    #responsive {
+    .responsive {
         display: none;
     }
     #jPanelMenu-menu {
         display: block
+    }
+    .menu>li {
+        width: 50%;
+        text-align: center;
     }
     a.menu-trigger {
         color: #fff;
